Sample Forking Example

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@ My Page
 </head>
 <body>
 <p>This is my first page. Hello World!, Heya</p>
+<a href="http://google.com">Google Yay!</a>
 </body>
 </html>
